deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ab05
  namespace: m324-csbe-lezama 
  labels:
    app: ab05
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: ab05
  template:
    metadata:
      labels:
        app: ab05
    spec:
      containers:
        - name: ab05
          image: ab03:latest
          command:
            - /bin/sh
            - "-c"
            - npm start
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            failureThreshold: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 3
            periodSeconds: 5
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 25m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
