service.yml
apiVersion: v1
kind: Service
metadata:
  name: ab05
  namespace: m324-csbe-lezama
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: ab05
