ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: AB05
  namespace: m324-csbe-lezama 
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - https://digital4you.internet-box.ch:6443 # Change this to your base url example: my-subdomain.m324.hackerman.ch
      secretName: https://digital4you.internet-box.ch:6443-tls # Change this to your base url example: my-subdomain.m324.hackerman.ch-tls
  rules:
    - host: https://digital4you.internet-box.ch:6443 # Change this to your base url example: my-subdomain.m324.hackerman.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: AB05
                port:
                  number: 80
