ingress_example.yml
# This is only an example. You don't apply this ingress file and don't use this in your pipeline.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ab05
  namespace: m324-csbe-lezama
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - digital4you.internet-box.ch # Change this to your base url example: my-subdomain.m324.hackerman.ch
      secretName: digital4you.internet-box.ch-tls # Change this to your base url example: my-subdomain.m324.hackerman.ch-tls
  rules:
    - host: digital4you.internet-box.ch # Change this to your base url example: my-subdomain.m324.hackerman.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ab05
                port:
                  number: 80
